Refactor project documentation in main.js and index.html for clarity and structure

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!--
+	Main HTML file for the student web project (WEB ATELIER - UDIT)
+	Structure:
+		- Header: Project title and subtitle
+		- Main: Project goals and weekly progress
+		- Footer: Copyright and links
+	Improvements/extensions:
+		- Add a navigation bar for more sections
+		- Include a contact form or about section
+		- Add more semantic elements (aside, article, etc.)
+		- Integrate dynamic content with JavaScript
+		- Add language switcher for multilingual support
+-->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -58,3 +71,13 @@
 		<script src="assets/js/main.js"></script>
 	</body>
 </html>
+<!--
+Possible improvements:
+	- Add favicon for branding
+	- Add Open Graph/meta tags for better sharing
+	- Preload important assets for performance
+	- Add social media/contact links in footer
+	- Dynamically load commit history using GitHub API
+	- Add a visual progress tracker or timeline
+	- Add theme switcher (dark/light mode)
+-->
