--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen> </iframe>
+          allowfullscreen
+          > </iframe>
   </body>
 </html>
