Fix script path in index.html for correct JavaScript file loading

--- a/sow/index.html
+++ b/sow/index.html
@@ -1383,7 +1383,7 @@
     <!-- AOS JS  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- MI JAVASCRIPT -->
-    <script src="/assets/js/sow.js"></script>
+    <script src="../assets/js/sow.js"></script>
   </body>
 </html>
 <!--
