Add base href to index.html for correct relative URL resolution

--- a/sow/index.html
+++ b/sow/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Outstanding Webs – Análisis de Sitios Premiados</title>
+    <base href="/DISENO_WEB/" />
     <!-- Enlace de Font Awesome desde CDNJS (iconos) -->
     <link
       rel="stylesheet"
