Refactor GitHub Pages link handling in sow.js; comment out base href in index.html for clarity

--- a/sow/index.html
+++ b/sow/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Outstanding Webs – Análisis de Sitios Premiados</title>
-    <base href="https://maaariinnn.github.io/DISENO_WEB/" />
+    <!-- <base href="https://maaariinnn.github.io/DISENO_WEB/" /> -->
     <!-- Enlace de Font Awesome desde CDNJS (iconos) -->
     <link
       rel="stylesheet"
