Refactor CSS and JavaScript for improved structure and readability; remove commented-out code and enhance HTML for better clarity and organization. Enhance the html for a better readability.

--- a/sow/index.html
+++ b/sow/index.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Outstanding Webs – Análisis de Sitios Premiados</title>
-    <!-- <base href="https://maaariinnn.github.io/DISENO_WEB/" /> -->
+
     <!-- Enlace de Font Awesome desde CDNJS (iconos) -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
+
+    <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/index.css" />
     <link rel="stylesheet" href="../assets/css/sow.css" />
+
     <!-- FUENTE  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -105,7 +108,7 @@
                 <div class="text-subsection">
                   <p>
                     Al entrar, la primera impresión es
-                    <strong>divertida y atractiva.</strong>El personaje
+                    <strong>divertida y atractiva.</strong> El personaje
                     caminando sobre el texto crea una conexión cercana y
                     amigable con el usuario. El mensaje principal (“Let me show
                     you where we can go”) se integra con la animación, invitando
@@ -953,7 +956,6 @@
                     loading="lazy"
                   >
                   </iframe>
-                  <!-- <img src="https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/OT_AnimacionesLineales.png" alt=""> -->
                 </div>
                 <figcaption class="figcaption_img">
                   Animación de las <strong>ilustraciones lineales</strong>
