Fix image tag formatting in index.html for improved HTML validity and consistency

--- a/sow/index.html
+++ b/sow/index.html
@@ -335,8 +335,9 @@
               <figure class="card">
                 <div class="cont-img">
                   <img
-                  src=https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/FP_Modelado3D.png
-                  alt="Producto modelado 3D"/>
+                    src="https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/FP_Modelado3D.png"
+                    alt="Producto modelado 3D"
+                  />
                 </div>
                 <figcaption class="figcaption_img">
                   Productos en <strong>modelado 3D</strong>
@@ -345,8 +346,9 @@
               <figure class="card">
                 <div class="cont-img">
                   <img
-                  src=https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/FP_CatalogoProductos.png?updatedAt1760653660443
-                  alt="Catalogo Productos" />
+                    src="https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/FP_CatalogoProductos.png?updatedAt1760653660443"
+                    alt="Catalogo Productos"
+                  />
                 </div>
                 <figcaption class="figcaption_img">
                   Animación del <strong>catálogo de productos</strong>
@@ -355,8 +357,9 @@
               <figure class="card">
                 <div class="cont-img">
                   <img
-                  src=https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/FP_NubeHumo.png?updatedAt1760296591172
-                  alt="Animación catálogo productos"/>
+                    src="https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/FP_NubeHumo.png?updatedAt1760296591172"
+                    alt="Animación catálogo productos"
+                  />
                 </div>
                 <figcaption class="figcaption_img">
                   Efecto visual de <strong>“nube de humo”</strong>
@@ -647,8 +650,9 @@
               <figure class="card">
                 <div class="cont-img">
                   <img
-                  src=https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/MP_Footer.jpg?updatedAt1760297653604
-                  alt="project image" />
+                    src="https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/MP_Footer.jpg?updatedAt1760297653604"
+                    alt="project image"
+                  />
                 </div>
                 <figcaption class="figcaption_img">
                   <strong>Footer</strong>
